# otto_stm32

./: README.md
otto_controller/Core/Inc/: main.h
otto_controller/Core/Inc/communication/: otto_messages.h
otto_controller/Core/Inc/control/: encoder.h  motor_controller.h  odometry.h  pid.h
otto_controller/Core/Src/: control.c  main.c  main.cpp
otto_controller/Core/Src/control/: motor_controller.c
pioneer_controller/: .cproject  .mxproject  .project  pioneer_controller.ioc
pioneer_controller/Core/Inc/: crc.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h  usart.h
pioneer_controller/Core/Inc/firmware/: fmw_core.h  fmw_inc.h  fmw_messages.h
pioneer_controller/Core/Inc/p3dx/: p3dx_core.h  p3dx_encoder.h  p3dx_inc.h  p3dx_messages.h  p3dx_motor_controller.h  p3dx_odometry.h  p3dx_pid.h
pioneer_controller/Core/Src/: control.c  crc.c  dma.c  gpio.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  sysmem.c  tim.c  usart.c
pioneer_controller/Core/Src/firmware/: fwm_core.c
pioneer_workstation/: Makefile
pioneer_workstation/src/: main.c
pioneer_workstation_ws/: Makefile
pioneer_workstation_ws/src/pioneer3DX_controller/: CMakeLists.txt  package.xml
pioneer_workstation_ws/src/pioneer3DX_controller/src/: main.cpp  p3dx_node.cpp  p3dx_node.hpp  stm32_messages.h
pioneer_workstation_ws/src/pioneer3dx_controller/: CMakeLists.txt  package.xml
pioneer_workstation_ws/src/pioneer3dx_controller/messages/: ChangeMode.msg  ConfigLed.msg  ConfigPid.msg  ConfigRobot.msg
pioneer_workstation_ws/src/pioneer3dx_controller/services/: ChangeMode.srv  ConfigLed.srv  ConfigPid.srv  ConfigRobot.srv  EmergencyMode.srv
pioneer_workstation_ws/src/pioneer3dx_controller/src/: main.cpp  main.hpp  p3dx_node.cpp  p3dx_node.hpp  stm32_messages.h
